# Jumpbot_Simulation_ros1

./: README.md
jumpbot_control/: CMakeLists.txt  package.xml
jumpbot_control/config/: jumpbot_servo_control.yaml  servo_control.yaml
jumpbot_control/launch/: arm_base_pers.perspective  arm_joint_position.launch  arm_joint_position.perspective  jumpbot_servo_control.launch  jumpbot_servo_rqt.launch  servo_rqt.launch
jumpbot_description/: CMakeLists.txt  package.xml
jumpbot_description/config/: joint_names_testjumpbot.yaml
jumpbot_description/meshes/: L_arm1.STL  L_arm2.STL  L_arm3.STL  L_baselink.STL  L_cam.STL  L_leg1_L.STL  L_leg1_R.STL  L_leg2.STL  L_leg3.STL  L_motor.STL  L_wheel.STL  R_arm1.STL  R_arm2.STL  R_arm3.STL  R_baselink.STL  R_cam.STL  R_leg1_L.STL  R_leg1_R.STL  R_leg2.STL  R_leg3.STL  R_motor.STL  R_wheel.STL  base_link.STL
jumpbot_description/rviz/: xacrodisplay.rviz
jumpbot_description/urdf/: jumpbot_v9.gazebo  jumpbot_v9.transmission  jumpbot_v9.urdf.xacro  jumpbot_v9_arm.urdf  jumpbot_v9_joint.urdf  jumpbot_v9_leg.urdf  jumpbot_v9_leg_without_xacro.urdf  jumpbot_v9_shapes.urdf  test.urdf  testing.sdf  testjumpbot.csv  testjumpbot.sdf
jumpbot_gazebo/: CMakeLists.txt  package.xml
jumpbot_gazebo/launch/: display.launch  gazebo.launch
jumpbot_gazebo/worlds/: Testspring.world
jumpbot_joint_controller/: CMakeLists.txt  package.xml
jumpbot_joint_controller/src/: arm_rotate.cpp  jumpbot_joint_state_publisher.cpp
