<package format="2">
  <name>jumpbot_gazebo</name>
  <version>1.0.0</version>
  <description>The jumpbot_gazebo package</description>



  <maintainer email="zxcv9141@naver.com">mosiwon</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>jumpbot_control</depend>
  <depend>jumpbot_description</depend>
  <depend>xacro</depend>


  <export>
    
  </export>
</package>
